
2016-10-29  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings-sed.sh: Fixed for generic 9 character version.
	* testsuite.src/listings.at: Fixed for generic 9 character version.

2016-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in: pass COB_HAS_UTC_OFFSET, set PATHSEP and COB_HAS_CURSES
	  for MinGW
	* testsuite.src/listings-sed.sh: fix for patchlevel up to 999  
	* testsuite.src/configuration.at, testsuite.src/used_binaries.at:
	  used `cobc -q` (instead of sed script) to simplify "unrecognized option"
	* testsuite.src/run_misc.at: define NULL if needed
	* testsuite.src/run_accept.at: evaluate COB_HAS_CURSES
	* testsuite.src/run_functions.at: evaluate COB_HAS_UTC_OFFSET
	* testsuite.src/configuration.at: evaluate PATHSEP

2016-10-22  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added --no_symbols test.

2016-10-18  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added some sequence numbers to a couple of
	  examples. Would have caught the SOURCEFORMAT VARIABLE bug.

2016-10-17  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in, atlocal_win: added UNIFY_LISTING
	* testsuite.src/listings.at: moved simplified sed commands used to a single
	  script listings-sed.sh and use this via UNIFY_LISTING
	* testsuite.src/listings.at: split symbols test, added test for -tlines,
	  use -tlines=0 to remove unforced page breaks
	* atlocal_win: added missing COB_HAS_UTC_OFFSET

2016-10-16  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: changed hardcoded listing version to a
	  template

2016-10-11  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: added Symbols test with OCCURS

2016-09-18  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/syn_file.at: added tests for variable record size,
	  depending on item and and key fields

2016-09-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
