@@ -1,4 +1,9 @@
 
+2016-10-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* cobol85/Makefile.am, cobol85/report.pl: added support for make with
+	  multiple jobs (only done when building the test directories)
+
 2016-10-29  Dave Pitts <dpitts@cozx.com>
 
 	* testsuite.src/listings-sed.sh: Fixed for generic 9 character version.
